# cmake-demo

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: main.h
modules/addon/: CMakeLists.txt  build.bat
modules/addon/src/: addon.c
modules/cnode/: CMakeLists.txt
modules/cnode/include/: charset.hpp  cnode.h  fs.hpp
modules/cnode/src/: cnode.cpp
src/: main.c
